Changed Pictures, Added project descriptions to projects page, Fixed spacing, Fixed Index Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -234,10 +234,12 @@ footer {
   text-align: center;
   height: 100vh;
   color: #ffffff;
+  
 }
 
 #home .home-thumb {
   text-align: center;
+  
 }
 
 #home .btn {
@@ -252,6 +254,7 @@ footer {
     margin-right: 16px;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
+    
 }
 
 #home .btn:hover {
@@ -560,5 +563,10 @@ footer a:hover {
   line-height: 25px;
 }
 
+}
+
+.right {
+  text-align: right;
+  float: right;
 }
 
